# NoMadNomad

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: nomadnomad-pairing.mdc
docs/: agent_playbook_tdd_refactor.md  iteration_plan.md  project_introduction.md
docs/bdd/: story_01_html_to_snapshot_gwt.md  story_02_contract_schemas_gwt.md  story_03_sqlite_gwt.md  story_04_requirement_analysis_agent_gwt.md  story_05_proposal_generation_agent_gwt.md  story_06_langgraph_analyze_proposal_gwt.md  story_07_business_api_gwt.md
resources/demo/: demo_requirement.html
src/nomadnomad/: __init__.py  main.py
src/nomadnomad/agents/: __init__.py  analyze_proposal_workflow.py  proposal_generation_agent.py  requirement_analysis_agent.py  text_utils.py
src/nomadnomad/api/: dependencies.py  projects.py  proposals.py  routes.py
src/nomadnomad/cli/: __init__.py  init_sqlite.py  preview_job_html.py  preview_proposal_generation.py  preview_requirement_analysis.py
src/nomadnomad/config/: __init__.py  llm_settings.py
src/nomadnomad/db/: __init__.py  connection.py  ddl.py  insert_payloads.py  repositories.py
src/nomadnomad/ingest/: __init__.py  errors.py  upwork_job_html_parser.py
src/nomadnomad/models/: __init__.py  job_posting_snapshot.py  proposal.py  requirement_analysis.py
src/nomadnomad/preview/: __init__.py  fake_llm_clients.py  snapshot_contract_bridge.py
src/nomadnomad/schemas/: __init__.py  contract_parse.py
streamlit_app/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  manual_verify_story7_api.py  test_analyze_proposal_workflow.py  test_business_api.py  test_proposal_generation_agent.py  test_requirement_analysis_agent.py  test_snapshot_to_contract_pipeline.py  test_sqlite_repositories.py
tests/unit/: __init__.py  test_health.py
(+22 files in other folders)
