[project]
name = "nomadnomad"
version = "0.1.0"
description = "AI 驱动的自由职业者全流程项目管理工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Zhenqi Wang" },
]
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "streamlit>=1.55.0",
    "langchain>=1.2.11",
    "langgraph>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
]
[project.scripts]
serve-api = "nomadnomad.main:run_api"

[tool.poetry]
packages = [{ include = "nomadnomad", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.135.1"
uvicorn = { extras = ["standard"], version = ">=0.41.0" }
streamlit = ">=1.55.0"
langchain = ">=1.2.11"
langgraph = ">=1.1.0"
pydantic = ">=2.12.5"
pydantic-settings = ">=2.13.1"
aiosqlite = ">=0.22.1"
httpx = ">=0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-cov = ">=7.0.0"
pytest-asyncio = ">=1.3.0"
black = ">=26.3.0"
isort = ">=8.0.1"
mypy = ">=1.19.1"
pre-commit = ">=4.5.1"
pre-commit-hooks = "^6.0.0"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
src = ["src", "streamlit_app", "tests"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["nomadnomad"]
src_paths = ["src", "streamlit_app", "tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=nomadnomad --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
